# axum-exercise

./: Cargo.toml  README.md
src/: app.rs  error.rs  lib.rs  logging.rs  main.rs  state.rs
src/middleware/: mod.rs
src/routes/: echo.rs  greet.rs  health.rs  mod.rs  root.rs  users.rs
static/: index.html
tests/: api.rs  helpers.rs
