[package]
name = "axum_exercise"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
validator = { version = "0.20", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
serde_json = "1"
